* Fixed some alignment issues with the user bar

--- a/trunk/war-for-newerth/public/stylesheets/style.css
+++ b/trunk/war-for-newerth/public/stylesheets/style.css
@@ -82,7 +82,11 @@ div#user-bar {
     margin: 0px;
     font-size: x-small;
     color: #f0f0f0;
-    line-height: 28px;
+    height: 29px;
+}
+div#user-bar > div {
+    padding: 5px 40px;
+    height: 20px;
 }
 div#user-bar a {
     color: #fafafa;
@@ -98,12 +102,10 @@ span#crumbs a:hover, span#crumbs a:visited:hover { color: #a0a0f0; }
 
 div#user-bar-greeting {
     background: transparent url('/images/container_left.png') center left no-repeat;
-    padding: 0px 40px;
 }
 div#user-bar-action {
     text-align: right;
     float:right;
-    padding: 0px 40px;
     background: transparent url('/images/container_right.png') center right no-repeat;
 }
 
